[package]
name = "time-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = {version= "0.25.0", features = []} 
egui_extras = { version = "*", features = ["all_loaders"] }
image = "0.24.8"
eframe = "0.25.0"
env_logger = "0.10.1"
